export const snapshot = {};

snapshot[`Interface Declaration > should process an empty Interface Declaration 1`] = `
"interface Hello {
}

"
`;

snapshot[`Interface Declaration > should process an Interface Declaration with an Identifier as the name 1`] = `
"interface Hello {
}

"
`;

snapshot[`Interface Declaration > should process an Interface Declaration with modifiers 1`] = `
"export interface Hello {
}

"
`;

snapshot[`Interface Declaration > should process an Interface Declaration with members 1`] = `
"export interface Hello {
    foo: string;
    bar?: string;
}

"
`;
